Se agrega carpeta de CSS con las hojas de estilo y se modifican los html con los CSS correspondiente

--- a/Proyecto/CSS/clientes.css
+++ b/Proyecto/CSS/clientes.css
@@ -5,16 +5,34 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+.header{
+    width: 100%;
+    background-color: #b5838d;
+    height: 200px;
+}
 
+h1{
+    color: white;
+    font-size: 60px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 20px;
+    text-align: center;
+}
+
+h2{
+    color: white;
+    text-align: center;
+}
+
+nav{   
+    background-color:ffb4a2;
+
+}
 body{
     font-family: sans-serif;
 }
 
-/*HEADER*/
-.header{
-    width: 1350px;
-    margin: 0px auto;
-}
+
 .titulo-logo2{
     margin: 0 auto;
     background: #F0D9FF;
