--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -6,6 +6,14 @@
             -moz-box-sizing: border-box;
             box-sizing: border-box;
         }
+
+        header{
+            width: 100%;
+            background-color: #b5838d;
+            height: 200px;
+        }
+
+        
         
         /*  Estilos  contacto  */
        
@@ -24,11 +32,13 @@
 
         .navegacion ul{
             list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
 
         }
         
         .menu > li{
-            position: relative;
             display: inline-block;
         }
 
@@ -39,14 +49,14 @@
         }
 
         .menu li a:hover{
-            color: #FFEF78;
+            color: #Fff;
             transition: all 0.3s;
 
         }
 
         .submenu{
             position: absolute;
-            background-color: rgba(253, 186, 252, 0.233);
+            background-color: rgba(253, 186, 252, 0.712);
             visibility: hidden;
             opacity: 0;
             transition: opacity 1.5s;
@@ -61,6 +71,46 @@
             visibility: visible;
             opacity: 1;
             cursor: pointer;
+        }
+
+        /*menu responsive*/
+        #boton-menu{
+            display: none;
+        }
+        header label{
+            display: none;
+            width: 50px;
+            height: 50px;
+            padding: 10px;
+            border-right: 1px solid #fff;
+        }
+
+        header label:hover{
+            cursor: pointer;
+            background: rgba(0, 0, 0, 0.3);
+        }
+
+        @media (max-width: 768px){
+            header label{
+                display: block;
+            }
+            .navegacion{
+                position: absolute;
+                background: #b5838d;
+                width: 70%;
+                margin-left: -70%;
+            }
+            .navegacion ul{
+                flex-direction: column;
+            }
+            .navegacion li{
+                border-top: 1px solid #fff;
+            }
+            #boton-menu:checked ~ .navegacion{
+                margin: 0;
+
+            }
+
         }
         form.contacto{
             background-color: rgba(255, 255, 255, 0.466);
@@ -102,11 +152,7 @@
 
         /* Estilos index */
 
-        .header{
-            width: 100%;
-            background-color: #735D78;
-            height: 200px;
-        }
+        
         
         h1.tituloindex{
             color: white;
@@ -126,7 +172,7 @@
             height: 20px;
         }
         a:link{   
-            background-color: #F7D1CD;
+            
             text-align: center;
             text-decoration: none;
         }
@@ -157,11 +203,7 @@
 
 
         /* Estilos clientes */
-        .header{
-            width: 100%;
-            background-color: #b5838d;
-            height: 200px;
-        }
+        
         
         h1{
             color: white;
