--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -1,351 +1,390 @@
- 
-        *{
-            margin: 0;
-            padding: 0px;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
 
-        header{
-            width: 100%;
-            background-color: #b5838d;
-            height: 200px;
-        }
+*{
+    margin: 0;
+    padding: 0px;
 
-        
-        
-        /*  Estilos  contacto  */
-       
-        .titulo{
-            text-align: center;
-            font-size: 40px;
-            margin: 10px;
-            color: #fff;
-        }
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* Estilos para todos los encabezados */
 
-        .navegacion{
-            width: 100%;
-            margin: 30px auto;
-            background-color: #f8e2ea;
-        }
+header{
+    width: 100%;
+    background-color: #b5838d;
+    height: 200px;
+}
 
-        .navegacion ul{
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
+h1{
+    color: white;
+    font-size: 60px;
+    margin-top: 20px;
+    text-align: center;
+}
 
-        }
-        
-        .menu > li{
-            display: inline-block;
-        }
-
-        .menu > li > a{
-            display: block;
-            padding: 15px 20px;
-            text-decoration: none;
-        }
-
-        .menu li a:hover{
-            color: #Fff;
-            transition: all 0.3s;
-
-        }
-
-        .submenu{
-            position: absolute;
-            background-color: rgba(253, 186, 252, 0.712);
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 1.5s;
-        }
-        .submenu li a{
-            display: block;
-            padding: 15px;
-            color: #fff;
-            text-decoration: none;
-        }
-        .menu li:hover .submenu{
-            visibility: visible;
-            opacity: 1;
-            cursor: pointer;
-        }
-
-        /*menu responsive*/
-        #boton-menu{
-            display: none;
-        }
-        header label{
-            display: none;
-            width: 50px;
-            height: 50px;
-            padding: 10px;
-            border-right: 1px solid #fff;
-        }
-
-        header label:hover{
-            cursor: pointer;
-            background: rgba(0, 0, 0, 0.3);
-        }
-
-        @media (max-width: 768px){
-            header label{
-                display: block;
-            }
-            .navegacion{
-                position: absolute;
-                background: #b5838d;
-                width: 70%;
-                margin-left: -70%;
-            }
-            .navegacion ul{
-                flex-direction: column;
-            }
-            .navegacion li{
-                border-top: 1px solid #fff;
-            }
-            #boton-menu:checked ~ .navegacion{
-                margin: 0;
-
-            }
-
-        }
-        form.contacto{
-            background-color: rgba(255, 255, 255, 0.466);
-            border-radius: 6px;
-            color: #999;
-            padding: 60px auto;
-            margin: 15px auto;
-            width: 600px;
-            font-size: 24px;
-        }
-        input, textarea{
-            margin: auto;
-            outline: none;
-            
-        }
-        
-        .campo{
-            padding: 5px;
-            border-radius: 6px;
-            border: 1px solid;
-            outline: none;
-        }
-        .campo:focus{
-            border-color: #cdb4db;
-        }
-        .enviar{
-            padding: 5px;
-            background-color: #f72585;
-            border: none;
-            border-radius: 6px;
-            font-size: 24px;
-            color: #fff;
-            margin: 10px auto;
-            display: inline-block;
-            cursor: pointer;
-            width: 100%;
-           
-        }
-
-        /* Estilos index */
-
-        
-        
-        h1.tituloindex{
-            color: white;
-            font-size: 100px;
-            margin: 20px 0 20px;
-            text-align: center;
-            
-        }
-        
-        h2.tituloindex{
-            color: white;
-            text-align: center;
-        }
-        nav.index{
-            background-color: #F7D1CD;
-            width: 100%;
-            height: 20px;
-        }
-        a:link{   
-            
-            text-align: center;
-            text-decoration: none;
-        }
-
-        /* Estilos Galeria */
-        
-        h1.titulogaleria{
-            color: white;
-            font-size: 60px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            margin-top: 20px;
-            text-align: center;
-        }
-        
-        h2.titulogaleria{
-            color: white;
-            text-align: center;
-        }
-        
-        nav.galeria{   
-            background-color:ffb4a2;
-        
-        }
-
-        /* Estilos tienda aplicar h1, nav y h2 en html tienda*/
-
-        
+h2{
+    color: white;
+    text-align: center;
+}
 
 
-        /* Estilos clientes */
-        
-        
-        h1{
-            color: white;
-            font-size: 60px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            margin-top: 20px;
-            text-align: center;
-        }
-        
-        h2{
-            color: white;
-            text-align: center;
-        }
-        
-        nav{   
-            background-color:ffb4a2;
-        
-        }
-        body{
-            font-family: sans-serif;
-        }
-        
-        
-        .titulo-logo2{
-            margin: 0 auto;
-            background: #F0D9FF;
-            overflow: hidden;
-            padding: 10px 0;
-        }
-        
-        .titulo-logo2 .titulo2{
-            float: right;
-            background-color: #F0D9FF;
-            height: 180px;
-            width: 700px;
-        }
-        
-        .titulo-logo2 .titulo2 h1{
-            text-decoration: none;
-            color: #d894df;
-            font-size: 35px;
-            display: inline-block;
-            padding: 50px ;
-            font-weight: 300;
-            font-family: inherit;
-        }
-        
-        .titulo-logo2 .logo2{
-            float: left;
-            background-color: #F0D9FF;
-            height: 180px;
-            
-        }
-        
-        .titulo-logo2 .logo2 img{
-            float: right;
-        }
-        
-        .menu-clientes{
-            margin-bottom: 40px;
-            border-bottom: 1px solid #f0f0f0;
-            text-align: left;
-            padding: 10px 0;
-            background: #F4F9F9;
-            margin: 0px auto;
-        }
-        
-        .menu-clientes ul{
-            list-style: none;
-            display: inline-block;
-            margin: 0 auto;
-        }
-        
-        .menu-clientes ul li{
-            display: inline-block;
-        }
-        
-        .menu-clientes ul li a{
-            display: inline-block;
-            padding: 10px 20px;
-            text-decoration: none;
-            color: #81817eee;
-        }
-        
-        .menu-clientes ul li a:hover{
-            color: #f0b6ed;
-        }
 
-        .fondo{
-            width: 98%;
-            border-radius: 15px;
-            box-shadow: 1px 0 4px rgb(0, 0,0,.2);
-            padding: 15px;
-            margin: 0px auto;
-            
-        }
-        .section{    
-            float: center;
-            width: 68%;
-            border-radius: 15px;
-            box-shadow: 1px 0 4px rgb(0, 0,0,.2);
-            margin-bottom: 15px;
-            padding: 15px;
-            margin: 0px auto;
-            background-color: #C7FFD8;
-        }
-        
-        .form{
-            background-color: #CFFFFE;
-        }
-        .legend{
-            text-align: center;
-            
-        }
-        .label{
-            margin: 55px;
-        }
-        .campo{
-            border-radius: 10px;
-            padding: 5px;
-            border: 1px solid;
-            margin: 5px 55px;
-        }
+/*  Estilos  contacto  */
 
-        .botones{
-            margin: 5px 80px;
-            font-size:  20px;
-            background-color: #f0dbef;
-            color: cornflowerblue;
-            padding: 5px 8px;
-        }
-        
-        .botones:hover{
-            color: rgb(0, 60, 255);
-            background-color: #f1bbbb;
-        }
-        
-        .footer{
-            text-align: center;
-            color: #8813cc;
-            background: #d3a8d8;
-            margin-bottom: 15px;
-            box-shadow: 1px 0 4px rgb(0, 0,0,.2);
-            padding: 30px;
-        }
+.titulo{
+    text-align: center;
+    font-size: 40px;
+    margin: 10px;
+    color: #fff;
+}
+
+.navegacion{
+    width: 100%;
+    margin: 30px auto;
+    background-color: #f8e2ea;
+}
+
+.navegacion ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+
+}
+
+.menu > li{
+    display: inline-block;
+}
+
+.menu > li > a{
+    display: block;
+    padding: 15px 20px;
+    text-decoration: none;
+}
+
+.menu li a:hover{
+    color: #Fff;
+    transition: all 0.3s;
+
+}
+
+.submenu{
+    position: absolute;
+    background-color: rgba(253, 186, 252, 0.712);
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.5s;
+}
+.submenu li a{
+    display: block;
+    padding: 15px;
+    color: #fff;
+    text-decoration: none;
+}
+.menu li:hover .submenu{
+    visibility: visible;
+    opacity: 1;
+    cursor: pointer;
+}
+
+/*menu responsive*/
+
+#boton-menu{
+    display: none;
+}
+header label{
+    display: none;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border-right: 1px solid #fff;
+}
+
+header label:hover{
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px){
+    header label{
+        display: block;
+    }
+    .navegacion{
+        position: absolute;
+        background: #b5838d;
+        width: 70%;
+        margin-left: -70%;
+    }
+    .navegacion ul{
+        flex-direction: column;
+    }
+    .navegacion li{
+        border-top: 1px solid #fff;
+    }
+    #boton-menu:checked ~ .navegacion{
+        margin: 0;
+
+    }
+}
+
+form.contacto{
+    background-color: rgba(255, 255, 255, 0.466);
+    border-radius: 6px;
+    color: #999;
+    padding: 60px auto;
+    margin: 15px auto;
+    width: 600px;
+    font-size: 24px;
+}
+input, textarea{
+    margin: auto;
+    outline: none;
+    
+}
+
+.campo{
+    padding: 5px;
+    border-radius: 6px;
+    border: 1px solid;
+    outline: none;
+}
+.campo:focus{
+    border-color: #cdb4db;
+}
+.enviar{
+    padding: 5px;
+    background-color: #f72585;
+    border: none;
+    border-radius: 6px;
+    font-size: 24px;
+    color: #fff;
+    margin: 10px auto;
+    display: inline-block;
+    cursor: pointer;
+    width: 100%;
+    
+}
+
+/* Estilos index */
+
+main{
+    background-color: #f9f0f2;
+}
+
+
+
+nav.index{
+    background-color: #F7D1CD;
+    width: 100%;
+    height: 20px;
+}
+
+a:link{   
+    text-align: center;
+    text-decoration: none;
+}
+
+
+/* Estilo para las imagenes del index */
+
+.IMG_index{
+    display: block;
+    margin: 50px auto;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #f7d1cd;
+    border-radius: 30px;           
+    width: 800px;
+    height: 600px;
+    object-fit: cover;
+}
+
+.slider{
+    width: 810px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: cambio 20s infinite alternate;
+    /*animation-timing-function: step-start;*/
+}
+
+.slider li{
+    width: 100%;
+    list-style: none;
+}
+
+@keyframes cambio {
+    0% { margin-left: 0; }
+    20% { margin-left: 0; }
+
+    22% {margin-left: -100%; }
+    45% {margin-left: -100%; }
+
+    47% {margin-left: -200%; }
+    70% {margin-left: -200%; }
+
+    72% {margin-left: -300%; }
+    100% {margin-left: -300%; }
+}
+
+/* Estilos Galeria */
+
+h1.titulogaleria{
+    color: white;
+    font-size: 60px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 20px;
+    text-align: center;
+}
+
+h2.titulogaleria{
+    color: white;
+    text-align: center;
+}
+
+nav.galeria{   
+    background-color:ffb4a2;
+
+}
+
+/* Estilos tienda aplicar h1, nav y h2 en html tienda*/
+
+
+
+
+/* Estilos clientes */
+
+nav{   
+    background-color:ffb4a2;
+
+}
+body{
+    font-family: sans-serif;
+}
+
+
+.titulo-logo2{
+    margin: 0 auto;
+    background: #F0D9FF;
+    overflow: hidden;
+    padding: 10px 0;
+}
+
+.titulo-logo2 .titulo2{
+    float: right;
+    background-color: #F0D9FF;
+    height: 180px;
+    width: 700px;
+}
+
+.titulo-logo2 .titulo2 h1{
+    text-decoration: none;
+    color: #d894df;
+    font-size: 35px;
+    display: inline-block;
+    padding: 50px ;
+    font-weight: 300;
+    font-family: inherit;
+}
+
+.titulo-logo2 .logo2{
+    float: left;
+    background-color: #F0D9FF;
+    height: 180px;
+    
+}
+
+.titulo-logo2 .logo2 img{
+    float: right;
+}
+
+.menu-clientes{
+    margin-bottom: 40px;
+    border-bottom: 1px solid #f0f0f0;
+    text-align: left;
+    padding: 10px 0;
+    background: #F4F9F9;
+    margin: 0px auto;
+}
+
+.menu-clientes ul{
+    list-style: none;
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.menu-clientes ul li{
+    display: inline-block;
+}
+
+.menu-clientes ul li a{
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #81817eee;
+}
+
+.menu-clientes ul li a:hover{
+    color: #f0b6ed;
+}
+
+.fondo{
+    width: 98%;
+    border-radius: 15px;
+    box-shadow: 1px 0 4px rgb(0, 0,0,.2);
+    padding: 15px;
+    margin: 0px auto;
+    
+}
+.section{    
+    float: center;
+    width: 68%;
+    border-radius: 15px;
+    box-shadow: 1px 0 4px rgb(0, 0,0,.2);
+    margin-bottom: 15px;
+    padding: 15px;
+    margin: 0px auto;
+    background-color: #C7FFD8;
+}
+
+.form{
+    background-color: #CFFFFE;
+}
+.legend{
+    text-align: center;
+    
+}
+.label{
+    margin: 55px;
+}
+.campo{
+    border-radius: 10px;
+    padding: 5px;
+    border: 1px solid;
+    margin: 5px 55px;
+}
+
+.botones{
+    margin: 5px 80px;
+    font-size:  20px;
+    background-color: #f0dbef;
+    color: cornflowerblue;
+    padding: 5px 8px;
+}
+
+.botones:hover{
+    color: rgb(0, 60, 255);
+    background-color: #f1bbbb;
+}
+
+.footer{
+    text-align: center;
+    color: #8813cc;
+    background: #d3a8d8;
+    margin-bottom: 15px;
+    box-shadow: 1px 0 4px rgb(0, 0,0,.2);
+    padding: 30px;
+}
