--- a/Proyecto/CSS/galeriaIMG.css
+++ b/Proyecto/CSS/galeriaIMG.css
@@ -31,6 +31,24 @@
     box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
 }
 
+.contenedorPaleta{
+    display: flex;
+    width: 70%;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-radius: 3px;
+}
+
+.contenedorPaleta .imagen{
+    width: 25%;
+    position: relative;
+    height: 300px;
+    margin-bottom: 5px;
+    padding: 15px;
+    box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
+}
+
 .imagen img{
     width: 100%;
     height: 100%;
@@ -78,6 +96,8 @@
     object-fit: cover;
     border-radius: 30px;
 }
+
+
 
 .overlay{
     position: absolute;
