--- a/Proyecto/CSS/galeriaIMG.css
+++ b/Proyecto/CSS/galeriaIMG.css
@@ -13,6 +13,13 @@
     margin-bottom: 100px;
 }
 
+.imagen img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 30px;
+}
+
 .contenedor{
     display: flex;
     width: 70%;
@@ -37,7 +44,7 @@
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-around;
-    border-radius: 3px;
+    border-radius: px;
 }
 
 .contenedorPaleta .imagen{
@@ -49,11 +56,41 @@
     box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
 }
 
-.imagen img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 30px;
+.contenedorCorazon{
+    display: flex;
+    width: 70%;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-radius: 5px;
+
+}
+
+.contenedorCorazon .imagen{
+    width: 32%;
+    position: relative;
+    height: 400px;
+    margin-bottom: 2px;
+    padding: 10px;
+    box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
+}
+
+.contenedorVariedad{
+    display: flex;
+    width: 70%;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border-radius: 5px;
+}
+
+.contenedorVariedad .imagen{
+    width: 32%;
+    position: relative;
+    height: 500px;
+    margin-bottom: 3px;
+    padding: 10px;
+    box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
 }
 
 .contenedorVertical{
@@ -68,11 +105,13 @@
 .contenedorVertical .imagenVertical{
     width: 33%;
     position: relative; 
-    height: 650px;
+    height: 550px;
     margin-bottom: 10px;
     padding: 10px;
     box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, .75);
 }
+
+
 
 .imagenVertical img{
     width:100%;
