--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -5,51 +5,63 @@
 }
 /* Estilos para todos los encabezados */
 
-header{
-    width: 100%;
-    background-color: #b5838d;
-    height: 200px;
-}
+
 
 h1{
-    color: white;
+    /* color: white; */
     font-size: 60px;
     margin-top: 20px;
     text-align: center;
 }
 
 h2{
-    color: white;
+    /* color: white; */
     text-align: center;
 }
 
+div.contenedor-header{
+    display: flex;
+    background-color: #b5838d;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: 200px;
+}
 
-
-/*  Estilos  contacto  */
-
-.titulo{
-    text-align: center;
-    font-size: 40px;
-    margin: 10px;
+div.contenedor-titulo{
+    margin-top: 30px;
     color: #fff;
 }
+
+div.contenedor-menu{
+    margin-top: 110px;
+    
+       
+    
+}
+
 
 .navegacion{
     width: 100%;
     margin: 30px auto;
-    background-color: #f8e2ea;
+    /* background-color: #f8e2ea; */
 }
 
 .navegacion ul{
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
+       
 
 }
 
 .menu > li{
     display: inline-block;
+    margin-left: 50px;
+    border-left: black 2px solid;
+    
+    
+
 }
 
 .menu > li > a{
@@ -70,17 +82,20 @@ h2{
     visibility: hidden;
     opacity: 0;
     transition: opacity 1.5s;
+    
 }
 .submenu li a{
     display: block;
     padding: 15px;
     color: #fff;
     text-decoration: none;
+    
 }
 .menu li:hover .submenu{
     visibility: visible;
     opacity: 1;
     cursor: pointer;
+    display: block;
 }
 
 /*menu responsive*/
@@ -105,11 +120,12 @@ header label:hover{
     header label{
         display: block;
     }
+    
     .navegacion{
         position: absolute;
         background: #b5838d;
         width: 70%;
-        margin-left: -70%;
+        margin-left: 70%;
     }
     .navegacion ul{
         flex-direction: column;
@@ -118,9 +134,10 @@ header label:hover{
         border-top: 1px solid #fff;
     }
     #boton-menu:checked ~ .navegacion{
-        margin: 0;
+        margin-left: -70%;
 
     }
+    
 }
 
 form.contacto{
