--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0px;
@@ -6,18 +5,6 @@
 
 
 /* Estilos para todos los encabezados */
-
-h1{
-    /* color: white; */
-    font-size: 60px;
-    margin-top: 20px;
-    text-align: center;
-}
-
-h2{
-    /* color: white; */
-    text-align: center;
-}
 
 div.contenedor-header{
     display: flex;
@@ -100,6 +87,7 @@ div.contenedor-menu{
 #boton-menu{
     display: none;
 }
+
 header label{
     display: none;
     width: 50px;
@@ -185,8 +173,8 @@ form.contacto{
     background-color: rgba(255, 255, 255, 0.466);
     border-radius: 6px;
     color: #999;
-    padding: 60px auto;
-    margin: 15px auto;
+    padding: 100px auto;
+    margin: auto;
     width: 600px;
     font-size: 24px;
 }
@@ -361,7 +349,7 @@ h2.titulogaleria{
 }
 
 nav.galeria{   
-    background-color:ffb4a2;
+    background-color:black;
 
 }
 
