--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -40,27 +40,35 @@ div.contenedor-menu{
     padding: 0;
 }
 
+
+
 .menu > li{
     display: inline-block;
     margin-left: 50px;
-    border-left: black 2px solid;
+    border-bottom: rgb(0, 0, 0) 2px solid;
+    
 }
 
 .menu > li > a{
     display: block;
     padding: 15px 20px;
     text-decoration: none;
+    color: #fff ;
+    
 }
 
 .menu li a:hover{
-    color: #Fff;
+    color: #d1b3c4;
     transition: all 0.3s;
+    background-color: #f9f0f2;
+    border-radius: 5px;
 
 }
 
 .submenu{
     position: absolute;
-    background-color: rgba(253, 186, 252, 0.712);
+    background-color: #d1b3c4;
+    border-radius: 15px;
     visibility: hidden;
     opacity: 0;
     transition: opacity 1.5s;
@@ -80,6 +88,7 @@ div.contenedor-menu{
     opacity: 1;
     cursor: pointer;
     display: block;
+    z-index: 9999;
 }
 
 /*menu responsive*/
