--- a/Proyecto/CSS/estilos.css
+++ b/Proyecto/CSS/estilos.css
@@ -1,11 +1,17 @@
+/* Diseño inicial para un width: 1800px */
 *{
     margin: 0;
     padding: 0px;
+    
 }
+html, body{
+    height: 100%;
+}
+
 
 /* Estilos para todos los encabezados */
 
-div.contenedor-header{
+.contenedor-header{
     display: flex;
     background-image: url(/Imagenes/fondo/pincelada.png);
     background-color: #f9f0f2;
@@ -23,16 +29,21 @@ div.contenedor-titulo{
     color: #fff;
 }
 
-div.contenedor-menu{
-    margin-top: 50px; 
+.contenedor-menu{
+    margin-top: 50px;
+    position: relative; 
 }
 
 .navegacion{
+    display: block;
     width: 100%;
-    margin: 20px auto;
+    margin-top: 10px;
+    text-align: center;
     font-family: 'Montserrat';
     font-size: 17px;
     padding: 15px;
+
+    
 }
 
 .navegacion ul{
@@ -69,7 +80,7 @@ div.contenedor-menu{
     visibility: hidden;
     opacity: 0.5;
     transition: opacity 1.5s;
-    
+    list-style: none;
 }
 
 .submenu li a{
@@ -88,47 +99,13 @@ div.contenedor-menu{
     z-index: 9999;
 }
 
-/*menu responsive*/
-
 #boton-menu{
     display: none;
 }
 
 header label{
     display: none;
-    width: 50px;
-    height: 50px;
-    padding: 10px;
-    border-right: 1px solid #fff;
-}
 
-header label:hover{
-    cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 768px){
-    header label{
-        display: block;
-    }
-    
-    .navegacion{
-        position: absolute;
-        background: #b5838d;
-        width: 70%;
-        margin-left: 70%;
-    }
-    .navegacion ul{
-        flex-direction: column;
-    }
-    .navegacion li{
-        border-top: 1px solid #fff;
-    }
-    #boton-menu:checked ~ .navegacion{
-        margin-left: -70%;
-
-    }
-    
 }
 
 /* Estilo para el Footer */
@@ -144,7 +121,7 @@ div.contenedor-footer{
     height: 200px;
 }
 
-h2.titulofooter{
+.titulofooter{
     font-family: 'Montserrat';
     font-size: 15px;
     color: white;
@@ -152,27 +129,94 @@ h2.titulofooter{
     text-align: center;
 }
 
-div.iconos{
+.iconos{
     float: left;
     margin: 100px 0 100px 0;
 }
 
-div.textofooter{
+.textofooter{
     float: left;
     margin:100px 0 100px 0;
 }
 
 .IMG_footer{
-    /*display: block;
-    margin: 50px auto;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #f7d1cd;
-    border-radius: 30px;*/         
     width: 40px;
     height: 40px;
     object-fit: cover;
     margin: 15px;
+}
+
+/* Estilos main */
+
+main{
+    background-color: #f9f0f2;
+    height: 100%;
+}
+.container-main{
+    width: 80%;
+    margin: auto;
+    padding: 50px 0;
+}
+.freyaEs{
+    text-align: center;
+    margin: 5% 20%;
+}
+
+.freyaEs h2{
+    font-size: 40px;
+}
+
+.freyaEs p{
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.contendorVideo{
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+
+.video{
+    margin: 0 20px;
+    width: 100%;
+    max-width: 600px;
+
+}
+
+.textVideo {
+    font-family: 'Architects Daughter', cursive;
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 10px;
+    color: #735d78;
+    margin: auto;
+}
+
+.textWhatsapp {
+    display: block;
+    font-family: 'Ephesis', cursive;
+    font-size: 40px;
+    text-align: center;
+    color: #735d78;
+    letter-spacing: 10px;
+    width: 70%;
+    margin: 50px auto 0;
+}
+
+.textWhatsapp h4{
+    font-size: 30px;
+}
+
+nav.index{
+    background-color: #F7D1CD;
+    width: 100%;
+    height: 20px;
+}
+
+a:link{   
+    text-align: center;
+    text-decoration: none;
 }
 
 /* Estilo para formulario de contacto */
@@ -246,84 +290,6 @@ textarea.campo{
     border-radius: 10px;
 }
 
-/* Estilos main */
-
-main{
-    background-color: #f9f0f2;
-    height: 100%;
-}
-
-.freyaEs{
-    text-align: center;
-    margin: 5% 20%;
-}
-
-.freyaEs h2{
-    font-size: 40px;
-}
-
-.freyaEs p{
-    font-size: 20px;
-    margin-top: 15px;
-}
-
-.contendorVideo{
-    overflow: hidden;
-    width: 100%;
-}
-
-div.video{
-    float: left;
-    margin: 50px 0 50px 150px;
-    width: 30%;
-}
-
-div.textWhatsapp h2{
-    float: right;
-    font-family: 'Architects Daughter', cursive;
-    font-size: 30px;
-    text-align: center;
-    letter-spacing: 10px;
-    color: #735d78;
-    width: 50%;
-    margin-top: 120px;
-    margin-right: 150px;
-}
-
-.textWhatsapp h3{
-    float: right;
-    font-family: 'Ephesis', cursive;
-    font-size: 40px;
-    text-align: center;
-    color: #735d78;
-    letter-spacing: 10px;
-    width: 50%;
-    margin-top: 40px;
-    margin-right: 150px;
-}
-
-.textWhatsapp h4{
-    float: right;
-    font-family: 'Ephesis', cursive;
-    font-size: 30px;
-    text-align: center;
-    color: #735d78;
-    letter-spacing: 10px;
-    width: 50%;
-    margin-right: 150px;
-}
-
-nav.index{
-    background-color: #F7D1CD;
-    width: 100%;
-    height: 20px;
-}
-
-a:link{   
-    text-align: center;
-    text-decoration: none;
-}
-
 /* Estilos Galeria */
 
 h1.titulogaleria{
@@ -361,80 +327,6 @@ nav.galeria{
     color: rgba(85, 85, 85, 0.452);
 
 }
-/*
-nav{   
-    background-color:ffb4a2;
-
-}
-body{
-    font-family: sans-serif;
-}
-
-
-.titulo-logo2{
-    margin: 0 auto;
-    background: #F0D9FF;
-    overflow: hidden;
-    padding: 10px 0;
-}
-
-.titulo-logo2 .titulo2{
-    float: right;
-    background-color: #F0D9FF;
-    height: 180px;
-    width: 700px;
-}
-
-.titulo-logo2 .titulo2 h1{
-    text-decoration: none;
-    color: #d894df;
-    font-size: 35px;
-    display: inline-block;
-    padding: 50px ;
-    font-weight: 300;
-    font-family: inherit;
-}
-
-.titulo-logo2 .logo2{
-    float: left;
-    background-color: #F0D9FF;
-    height: 180px;
-    
-}
-
-.titulo-logo2 .logo2 img{
-    float: right;
-}
-
-.menu-clientes{
-    margin-bottom: 40px;
-    border-bottom: 1px solid #f0f0f0;
-    text-align: left;
-    padding: 10px 0;
-    background: #F4F9F9;
-    margin: 0px auto;
-}
-
-.menu-clientes ul{
-    list-style: none;
-    display: inline-block;
-    margin: 0 auto;
-}
-
-.menu-clientes ul li{
-    display: inline-block;
-}
-
-.menu-clientes ul li a{
-    display: inline-block;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #81817eee;
-}
-
-.menu-clientes ul li a:hover{
-    color: #f0b6ed;
-}*/
 
 fieldset{
     width: 100%;
@@ -449,4 +341,156 @@ fieldset{
     border-width: 2px;
     border-style: groove;
     border-image: initial;
+}
+
+/* Responsive */
+@media (max-width: 768px){
+    html{
+        overflow-x: hidden;
+    }
+    .contenedor-header{
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .contenedor-logo{
+        margin-left: 50px;
+    }
+
+    .contenedor_icon-menu{
+        display: block;
+        margin-top: 5%;
+        margin-left: 50%;
+    }
+    .icon-menu {
+        font-size: 40px;
+        border: 1px solid #555;
+    }
+
+    .icon-menu:hover{
+        color: #e8c2ca;
+    }
+
+    header label{
+        display: block;
+        width: 42px;
+    }
+    header label:hover{
+        cursor: pointer;
+        background: rgba(0, 0, 0, 0.3);
+    }
+    .menu li{
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    .menu li a{
+        color: #735d78;
+    }
+    .navegacion{
+        margin-top: 30px;
+        margin-left: 60%;
+        visibility: hidden;
+    }
+
+    
+    #boton-menu:checked ~ .navegacion{
+        visibility: visible;
+        margin-left: -43%;
+        margin-top: 40px;
+        width: 100%;
+        font-size: 15px;
+    }
+
+    .contendorVideo{
+        flex-direction: column;
+    }
+    .video{
+        margin: auto;
+    }
+    .textVideo{
+        margin: 40px auto;
+        font-size: 18px;
+        font-weight: bold;
+        border-bottom: 1px solid #555;
+        padding-bottom: 30px;
+    }
+    .textWhatsapp{
+        font-size: 30px;
+        margin: auto;
+        border-top: 1px solid #555;
+        padding-top: 30px;
+    }
+    .contenedor-footer{
+        flex-direction: column;
+    }
+    .iconos{
+        padding-top: 80px;
+        padding-left: 40px;
+    }
+    .textofooter{
+        padding-top: 30px;
+    }
+
+    .textofooter h2{
+        font-size: 10px;
+        padding-top: 10px;
+    }
+
+}
+
+
+@media (max-width: 1024px) {
+    html{
+        overflow-x: hidden;
+    }
+    .contenedor-header{
+        flex-direction: column;
+    }
+    .menu li{
+        margin-left: 5px;
+        margin-top: 0;
+    }
+
+    .navegacion{
+        font-size: 12px;
+        margin-top: -10px;
+        margin-left: -20%;
+
+    }
+    .contendorVideo{
+        justify-content: space-around;
+        height: 30%;
+    }
+    .Video{
+        max-width: 400px;
+    }
+    .textVideo{
+        font-size: 15px;
+    }
+    .textWhatsapp{
+        font-size: 30px;
+    }
+}
+
+@media (min-width: 1280px){
+
+    .menu li{
+        margin-left: 20px;
+        margin-bottom: 35px;
+    }
+    .navegacion{
+        font-size: 18px;   
+    }
+    .contendorVideo{
+        padding-bottom: 50px;
+        border-bottom: 1px solid #555;
+    }
+    .textVideo{
+        font-size: 20px;
+    }
+    .textWhatsapp{
+        width: 100%;
+        margin: 50px auto;
+        font-size: 40px;
+    }
 }
